# XashInjector

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  format.yml
assets/: icon.rc
scripts/: BuildAndPackage.ps1  BuildDebug.ps1  BuildRelease.ps1
src/: CMakeLists.txt  main.cpp
src/GUI/: CMakeLists.txt  ConfigPanel.cpp  DirectX11.cpp  DirectX11.hpp  EjectPanel.cpp  Imgui.cpp  Imgui.hpp  InjectPanel.cpp  SettingsPanel.cpp  SideBar.cpp  WindowManager.cpp  WindowManager.hpp
src/GUI/Components/: CMakeLists.txt  CustomColorPicker.cpp
src/injector/: Assembly.cpp  Assembly.hpp  CMakeLists.txt  ModInfos.hpp  ModsManager.cpp  ModsManager.hpp  MonoModule.cpp  MonoModule.hpp
src/settings/: CMakeLists.txt  StyleSettings.cpp  StyleSettings.hpp  ThemePresets.hpp  XashSettings.cpp  XashSettings.hpp
src/system/: CMakeLists.txt  ExternalProcAdress.cpp  ExternalProcAdress.hpp  System.cpp  System.hpp
